<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alexandersobyanin.tictactoebyb1oki.Game">
    <item
        android:id="@id/menu_speak"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:orderInCategory="100"
        android:title="@string/menu_speak"
        app:showAsAction="always" />
    <item
        android:id="@id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="300"
        android:title="@string/menu_exit"
        app:showAsAction="ifRoom" />
</menu>
