<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Game"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridView
            android:id="@id/gameField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/gameInfo"
            android:layout_margin="5.0dip"
            android:columnWidth="90.0dip"
            android:numColumns="3"
            android:stretchMode="spacingWidthUniform" />

        <TableLayout
            android:id="@id/gameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@id/ticScoresText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:layout_marginRight="20.0dip"
                    android:layout_weight="1.0"
                    android:hint="@string/tic_score"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@id/toeScoresText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:layout_marginRight="20.0dip"
                    android:layout_weight="1.0"
                    android:hint="@string/toe_score"
                    android:textSize="16.0sp" />
            </TableRow>

            <TextView
                android:id="@id/infoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:gravity="center"
                android:hint="@string/game_info"
                android:textSize="18.0sp" />
        </TableLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>